--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -34,7 +34,7 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
 
-                <li><a href="/process/index">How it works</a></li>
+                <li><a href="/processes/index">How it works</a></li>
                 <li><a href="/products/index">Products</a></li>
                 <li><a href="team.html">Software Busters</a></li>
                 <li><a href="pricing.html">Pricing</a></li>
