--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -36,15 +36,15 @@
 
                 <li><a href="/processes/index">How it works</a></li>
                 <li><a href="/products/index">Products</a></li>
-                <li><a href="team.html">Software Busters</a></li>
-                <li><a href="pricing.html">Pricing</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="/busters/index">Software Busters</a></li>
+                <li><a href="/prices/index">Pricing</a></li>
+                <li><a href="/contacts/index">Contact</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">More <i class="fa fa-angle-down"></i></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="team.html">Our Team</a></li>
-                        <li><a href="blog-leftimg.html">Blogs</a></li>
-                        <li><a href="faq.html">FAQS</a></li>
+                        <li><a href="/teams/index">Our Team</a></li>
+                        <li><a href="/blogs/index">Blogs</a></li>
+                        <li><a href="/faqs/index">FAQS</a></li>
                     </ul>
                 </li>
 
