--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -82,7 +82,7 @@
                   <ul class="dropdown-menu">
                     <li><a href="#"><h4 align="center">Create a Product</h4>
                         <p align="center"><font size="3">Register as a Company</font></p></a></li>
-                    <li><a href="#"><h4 align="center">Become a Tester</h4>
+                    <li><a href="#"><h4 align="center">Become a Buster</h4>
                         <p align="center"><font size="3">Create an Account</font></p></a></li>
                   </ul>
                 </li>
