--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -333,7 +333,8 @@ p.sub-text{
 
 }
 .no-padding.img-2{
-    background:url(../img/showcase-1.jpg) scroll center no-repeat;
+    /** background:url(../img/showcase-1.jpg) scroll center no-repeat;**/
+    background:url(<%= asset_path 'showcase-1.jpg' %>) scroll center no-repeat;
     background-size:  cover;
    position: absolute;
    height: 100%;
