--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -37,12 +37,13 @@
                 <li><a href="/processes/index">How it works</a></li>
                 <li><a href="/products/index">Products</a></li>
                 <li><a href="/busters/index">Software Busters</a></li>
+                <li><a href="/techexperts/index">Online Tech Experts</a></li>
                 <li><a href="/prices/index">Pricing</a></li>
-                <li><a href="/contacts/index">Contact</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">More <i class="fa fa-angle-down"></i></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="/teams/index">Our Team</a></li>
+                        <li><a href="/about/index">About Us</a></li>
+                        <li><a href="/contacts/index">Contact</a></li>
                         <li><a href="/blogs/index">Blogs</a></li>
                         <li><a href="/faqs/index">FAQS</a></li>
                     </ul>
