--- a/app/views/processes/index_process.html.erb
+++ b/app/views/processes/index_process.html.erb
@@ -67,7 +67,7 @@
         <div class="container process">
             <h2>Our Working Process</h2>
             <p class="lead">
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                Bugsters provides a result-based crowdtesting platform which allows world's users to bust your products and pay based on the bug which the software busters find.
             </p>
             <hr>
             <div class="divide40"></div>
