--- a/app/views/aboutus/index_aboutus.html.erb
+++ b/app/views/aboutus/index_aboutus.html.erb
@@ -68,15 +68,43 @@
                 <div class="col-md-6 margin20">
                     <h3 class="heading">A little about us</h3>
                     <p>
-                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni. Dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum
+                      Bugsters provides a result-based crowdtesting platform which allows world's users to bust your products and pay based on the bug which the software busters find.
+                      But we are not stopping here, We also connect world's tech experts to help enterprises to solve their problems through our crowd-tech expert online platform.<br>
                     </p>
-                    <p><a href="#" class="btn border-black btn-lg">Our Services</a></p>
+                    <p><a href="/products/index" class="btn border-black btn-lg">Our Services</a></p>
                 </div>
                 <div class="col-md-6">
                     <img src="<%= asset_path "showcase-1.jpg" %>" class="img-responsive" alt="">
                 </div>
             </div><!--about intro-->
+
+            <!--Cat Addition Our Business Model-->
+            <section id="services-bg-wrap" class="white-bg">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-4 hidden-sm">
+                            <img src="<%= asset_path "mockup-ipad.png" %>" class="img-responsive wow animated fadeInLeft" alt="mockup">
+                        </div>
+                        <div class="col-md-8  col-xs-12 service-4-meta">
+                            <h3>Our Business Model - CBC</h3>
+                            <span class="center-line"></span>
+                            <div class="divide20"></div>
+                            <p>
+                              Our Disrupting Business Model CBC Model-Customers To Business To Customers could help companies (B) to find the potential problems of their products through our world's crowd-busting platform (1st C), but we are not stopping here. We also connect world's tech experts(2nd C) to help enterprises to solve their problems through our crowd-tech expert online platform; therefore, we help companies to reach their business aim in the most productive way and lowest cost. <br>
+                              As the driven-power behind the startup of our business, we believe everybody is natural busters and a perfect product must be dismantled millions of times before they become perfect. Therefore, We respect those busters, they are truly creative creators! <br>
+                              We encourage every company to take this challenge and encourage everyone to join this awesome real-world online product busting game!
+                            </p>
+                            <div class="divide20"></div>
+
+                            <a href="#" class="btn border-black btn-lg">Contact Us</a>
+                        </div>
+                    </div>
+                </div>
+            </section><!--services with the showcase mockups-->
+            <!--End of Cat Addition Our Business Model-->
+
             <div class="divide60"></div>
+
             <div class="row">
                 <div class="col-md-4 margin20">
                     <h3 class="heading">Whay hire us?</h3>
@@ -165,30 +193,10 @@
             </div><!--row of skills collapse and highlights-->
 
         </div><!--.container-->
+
+
         <div class="divide60"></div>
-        <section class="fun-fact-wrap parallax" data-stellar-background-ratio="0.5">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-3 margin20 facts-in">
-                        <h3><i class="fa fa-image"></i><span class="counter">6858</span></h3>
-                        <h4>Projects Complete</h4>
-                    </div><!--facts in-->
-                    <div class="col-md-3 margin20 facts-in">
-                        <h3><i class="fa fa-users"></i><span class="counter">685</span></h3>
-                        <h4>Happy Customers</h4>
-                    </div><!--facts in-->
-                    <div class="col-md-3 margin20 facts-in">
-                        <h3><i class="fa fa-clock-o"></i><span class="counter">6000</span></h3>
-                        <h4>Hours Work </h4>
-                    </div><!--facts in-->
-                    <div class="col-md-3 margin20 facts-in">
-                        <h3><i class="fa fa-coffee"></i><span class="counter">2500</span></h3>
-                        <h4>Cups of tea</h4>
-                    </div><!--facts in-->
-                </div>
-            </div>
-        </section><!--fun facts-->
-        <div class="divide60"></div>
+
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
