--- a/app/views/processes/index_process.html.erb
+++ b/app/views/processes/index_process.html.erb
@@ -67,30 +67,36 @@
         <div class="container process">
             <h2>Our Working Process</h2>
             <p class="lead">
-                Bugsters provides a result-based crowdtesting platform which allows world's users to bust your products and pay based on the bug which the software busters find.
+                Bugsters provides a result-based crowdtesting platform which allows world's users to bust your products and pay based on the bugs which the software busters find.
+                But we are not stopping here, We also connect world's tech experts to help enterprises to solve their problems through our crowd-tech expert online platform.<br>
             </p>
             <hr>
             <div class="divide40"></div>
            <div class="process-step"> <span class="process-border"></span>
         <div class="step">
           <div class="icon-square"> <i class="fa fa-lightbulb-o"></i> </div>
-          <h5>Create Ideas</h5>
-          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+          <h5>CREATE & JOIN A PRODUCT</h5>
+          <p>Create a product for free as a company or Explore a product and find some bugs as a user.</p>
         </div>
         <div class="step even">
           <div class="icon-square"> <i class="fa fa-crop"></i> </div>
-          <h5>Create Design</h5>
-          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+          <h5>FIND & FIX A BUG</h5>
+          <!--Future Solution-->
+          <!--<p>View the Bug Reports to get know the user ability & quality of your products and Invite a World's leading Tech Expert to fix the Bugs or <br>
+             Report some bugs or Provide your tech expert to say your voice.</p>-->
+          <!--End of Future Solution-->
+          <p>View the Bug Reports to get know the user ability & quality of your products or Report some bugs to say your voice.</p>
         </div>
+        
         <div class="step">
           <div class="icon-square"> <i class="fa fa-cogs"></i> </div>
-          <h5>Develop the Project</h5>
-          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+          <h5>PAY & GET PAID BASED ON RESULTS</h5>
+          <p>Reward the awesome software busters or Get paid based on the bug you find, share success.</p>
         </div>
         <div class="step even">
           <div class="icon-square"> <i class="fa fa-plane"></i> </div>
-          <h5>Launch the project</h5>
-          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+          <h5>We Believe & Launch the project</h5>
+          <p>We believe every high-quality product can face the challenge of world's busters & All the users are natural busters to improve the quality of your products and deserve to get paid.</p>
         </div>
       </div><!--steps-->
         </div>
