--- a/app/views/aboutus/index_aboutus.html.erb
+++ b/app/views/aboutus/index_aboutus.html.erb
@@ -211,8 +211,8 @@
                 <div class="col-md-3 margin20">
                     <div class="team-wrap">
                         <img src="<%= asset_path "team-1.jpg" %>" class="img-responsive" alt="">
-                        <h4>Jolly smith</h4>
-                        <span>Web Designer</span>
+                        <h4>Caroline Gao</h4>
+                        <span>Founder & Cheif Fire Starter</span>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lorem quam, adipiscing condimentum tristique vel, eleifend sed turpis
                         </p>
@@ -226,8 +226,8 @@
                 <div class="col-md-3 margin20">
                     <div class="team-wrap">
                         <img src="<%= asset_path "team-2.jpg" %>" class="img-responsive" alt="">
-                        <h4>Jolly smith</h4>
-                        <span>Web Designer</span>
+                        <h4>David Stapleton</h4>
+                        <span>Founder & Cheif Support Officer</span>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lorem quam, adipiscing condimentum tristique vel, eleifend sed turpis
                         </p>
