10-11-2015 changed awesome busters add p

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -655,6 +655,7 @@ right: 13px;
     color:#000;
     background-color: transparent;
 }
+
 .border-black:hover{
     background-color: #000;
     border-color: #000;
@@ -679,6 +680,20 @@ right: 13px;
     border-color: #29ABE2;
     color:#fff;
 }
+
+/** Cat Add border-blue css **/
+.border-blue{
+  border: 1px solid #000;
+  color:#000;
+}
+
+.border-blue:hover{
+  background-color: #29ABE2;
+  border-color: #29ABE2;
+  color:#fff;
+}
+/** End of Cat Add border-blue css **/
+
 /************************image hover effect*******************/
 
 .item-img-wrap{
