--- a/app/views/aboutus/index_aboutus.html.erb
+++ b/app/views/aboutus/index_aboutus.html.erb
@@ -71,7 +71,7 @@
                       Bugsters provides a result-based crowdtesting platform which allows world's users to bust your products and pay based on the bug which the software busters find.
                       But we are not stopping here, We also connect world's tech experts to help enterprises to solve their problems through our crowd-tech expert online platform.<br>
                     </p>
-                    <p><a href="/products/index" class="btn border-black btn-lg">Our Services</a></p>
+                    <p><a href="/products/index" class="btn border-blue btn-lg">Our Services</a></p>
                 </div>
                 <div class="col-md-6">
                     <img src="<%= asset_path "showcase-1.jpg" %>" class="img-responsive" alt="">
@@ -96,7 +96,7 @@
                             </p>
                             <div class="divide20"></div>
 
-                            <a href="#" class="btn border-black btn-lg">Contact Us</a>
+                            <a href="#" class="btn border-blue btn-lg">Contact Us</a>
                         </div>
                     </div>
                 </div>
