--- a/app/views/busters/index_buster.html.erb
+++ b/app/views/busters/index_buster.html.erb
@@ -51,12 +51,12 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
-                        <h4>Our Team</h4>
+                        <h4>We think our Busters are awesome and the heros of the perfect products before they get perfect.</h4>
                     </div>
                     <div class="col-sm-6 hidden-xs text-right">
                         <ol class="breadcrumb">
                             <li><a href="index.html">Home</a></li>
-                            <li>team</li>
+                            <li>Busters</li>
                         </ol>
                     </div>
                 </div>
@@ -68,14 +68,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 margin20">
-                    <h3 class="heading">Little About our team</h3>
+                    <h3 class="heading">Little About our busters</h3>
                     <p>
-                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni. Dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum
+                      We have 1000+ busters around the world who are located across North America, Oceania, Europea and Asia have registered on our Bugsters platform. Our awesome busters have helped 50+ companies to bust & perfect their over 200 products.
                     </p>
-                    <p><a href="#" class="btn btn-theme-bg">Read more</a></p>
+                    <p><a href="#" class="btn btn-theme-bg">Join Us Now</a></p>
                 </div>
                 <div class="col-md-6">
-                    <img src="<%= asset_path "showcase-4.jpg" %>" class="img-responsive" alt="">
+                    <!--<img src="<%= asset_path "showcase-4.jpg" %>" class="img-responsive" alt="">-->
+                    <img src="<%= asset_path "showcase-worldmap.jpg" %>" class="img-responsive" alt="">
                 </div>
             </div><!--about intro-->
             <div class="divide60"></div>
@@ -88,7 +89,23 @@
             <div class="row">
                 <div class="col-md-3 margin20">
                     <div class="team-wrap">
-                        <img src="<%= asset_path "team-1.jpg" %>" class="img-responsive" alt="">
+                        <!--Cat Addition Buster Picture-Circle-->
+
+                        <div class="quote-footer">
+                            <div class="quote-author-img">
+                                <img src="<%= asset_path "customer-3.jpg" %>" alt="">
+                            </div>
+                            <h4>Caroline</h4>
+                            <p>
+                              <strong>Reputation 60</strong><br>
+                              <strong>Bust 60 bugs</strong>
+                            </p>
+                        </div>
+
+
+
+                        <!--End of Cat Addition Buster Picture Circle-->
+                        <!--<img src="<%= asset_path "team-1.jpg" %>" class="img-responsive" alt="">-->
                         <h4>Jolly smith</h4>
                         <span>Web Designer</span>
                         <p>
@@ -103,17 +120,22 @@
                 </div><!--team col-->
                 <div class="col-md-3 margin20">
                     <div class="team-wrap">
-                        <img src="<%= asset_path "team-2.jpg" %>" class="img-responsive" alt="">
+
+                        <a href="#"><img src="<%= asset_path "customer-3.jpg" %>" class="img-circle img-responsive", size:"10x10" alt=""></a>
                         <h4>Jolly smith</h4>
                         <span>Web Designer</span>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lorem quam, adipiscing condimentum tristique vel, eleifend sed turpis
                         </p>
+
                         <ul class="list-inline social-1">
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                             <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                         </ul><!--social-->
+
+                        <p><a href="#" class="btn btn-primary" role="button">Book</a> 180Coins</p>
+
                     </div><!--team-wrap-->
                 </div><!--team col-->
                 <div class="col-md-3 margin20">
