--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -401,11 +401,14 @@
                         <div class="center-heading">
                             <h2>Awesome Busters</h2>
                             <span class="center-line"></span>
-
+                            <p>
+                                We have 1000+ busters around the world on our platform and have helped 50+ companies to bust & perfect their over 100 products.
+                                <a href="#" style="text-decoration: none">Join Us Now</a> and become one of awesome busters.
+                            </p>
                         </div>
                     </div>
                 </div><!--center heading end-->
-                <div class="divide60"></div>
+                <div class="divide30"></div>
                 <div class="row">
                   <!--<div class="col-md-12">
                       <div id="work-carousel" class="owl-carousel owl-spaced">-->
@@ -489,10 +492,7 @@
                             </div><!--colored quote box col-->
                       <!--</div>
                    </div>-->
-
                 </div>
-
-
             </div>
         </div><!--testimonials v-2 end-->
         <!--End of Creative Software Testers-->
