--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -43,8 +43,9 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">More <i class="fa fa-angle-down"></i></a>
                     <ul class="dropdown-menu" role="menu">
                         <li><a href="/about/index">About Us</a></li>
-                        <li><a href="/contacts/index">Contact</a></li>
                         <li><a href="/blogs/index">Blogs</a></li>
+                        <li><a href="/contacts/index">Contact</a></li>
+                        <li><a href="/career/index">Career</a></li>
                         <li><a href="/faqs/index">FAQS</a></li>
                     </ul>
                 </li>
