finished techexperts, career, busters

--- a/app/views/busters/index_buster.html.erb
+++ b/app/views/busters/index_buster.html.erb
@@ -83,34 +83,33 @@
             <div class="row">
 
                 <div class="col-md-12 margin20">
-                    <h3 class="heading">Meet the Team</h3>
+                    <h3 class="heading">Meet the Busters and Connect the Users</h3>
                 </div>
             </div>
+
             <div class="row">
                 <div class="col-md-3 margin20">
                     <div class="team-wrap">
-                        <!--Cat Addition Buster Picture-Circle-->
-
-                        <div class="quote-footer">
-                            <div class="quote-author-img">
-                                <img src="<%= asset_path "customer-3.jpg" %>" alt="">
-                            </div>
-                            <h4>Caroline</h4>
-                            <p>
-                              <strong>Reputation 60</strong><br>
-                              <strong>Bust 60 bugs</strong>
-                            </p>
-                        </div>
-
-
-
-                        <!--End of Cat Addition Buster Picture Circle-->
-                        <!--<img src="<%= asset_path "team-1.jpg" %>" class="img-responsive" alt="">-->
+                        <img src="<%= asset_path "team-1.jpg" %>" class="img-responsive" alt="">
                         <h4>Jolly smith</h4>
-                        <span>Web Designer</span>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lorem quam, adipiscing condimentum tristique vel, eleifend sed turpis
-                        </p>
+                        <span>Super Buster</span>
+                        <!-- 10-11-2015 Cat Add Details of Buster according to the design on History Notebook Page2-->
+                        <p>Description: I am a super buster who can buster your product in 1 sec.</p><br>
+                        <p>Industry: Video Game</p><br>
+                        <p>Interest: SaaS, IoT, Mobile</p><br>
+                        <p>Platform: Android1.0, iOS6.0</p><br>
+                        <p>Language: English, French</p><br>
+
+                        <ul class="list-inline social-1">
+                          <li><p><a href="#"><span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>160 Reputation</a></p></li><br>
+                          <li><p><a href="#"><span class="glyphicon glyphicon-bitcoin" aria-hidden="true"></span>24.000 Bitcoin</a></p></li><br>
+                          <li><p><a href="#"><span class="glyphicon glyphicon-bold" aria-hidden="true"></span>40 Bugs</a></p></li><br>
+                          <!--Need Dog's opinion, shall we add the button INVITE which allow companies to invite by themselve? -->
+                          <li><p><a href="#" class="btn btn-default" role="button">Book</a></p></li>
+                        </ul>
+
+                        <!-- End of 10-11-2015 Cat Add Details of Buster according to the design on History Notebook Page2-->
+
                         <ul class="list-inline social-1">
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -121,7 +120,7 @@
                 <div class="col-md-3 margin20">
                     <div class="team-wrap">
 
-                        <a href="#"><img src="<%= asset_path "customer-3.jpg" %>" class="img-circle img-responsive", size:"10x10" alt=""></a>
+                        <img src="<%= asset_path "team-2.jpg" %>" class="img-responsive" alt="">
                         <h4>Jolly smith</h4>
                         <span>Web Designer</span>
                         <p>
@@ -133,8 +132,6 @@
                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                             <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                         </ul><!--social-->
-
-                        <p><a href="#" class="btn btn-primary" role="button">Book</a> 180Coins</p>
 
                     </div><!--team-wrap-->
                 </div><!--team col-->
@@ -234,6 +231,13 @@
             </div>
         </div><!--team-->
         <div class="divide60"></div>
+
+        <section id="cta-1">
+            <div class="container">
+                <h1>Believe you are a natural creative product buster?</h1>
+                <a href="#" class="btn border-white btn-lg">Bust a Product Now</a>
+            </div>
+        </section>
 
 
         <!--scripts and plugins -->
