--- a/app/views/career/index_career.html.erb
+++ b/app/views/career/index_career.html.erb
@@ -73,6 +73,7 @@
                     Bugsters provides a result-based crowdtesting platform which allows world's users to bust your products and pay based on the bug which the software busters find.
                     But we are not stopping here, We also connect world's tech experts to help enterprises to solve their problems through our crowd-tech expert online platform.<br>
                   </p>
+
                </div>
                <div class="col-md-6">
                   <img src="<%= asset_path "showcase-1.jpg" %>" class="img-responsive" alt="">
@@ -161,7 +162,14 @@
 
         </div><!--careers container-->
         <div class="divide80"></div>
-        
+
+        <section id="cta-1">
+            <div class="container">
+                <h1>Want to Work With Us?</h1>
+                <a href="#" class="btn border-white btn-lg">Get In Touch</a>
+            </div>
+        </section>
+
         <!--scripts and plugins -->
         <!--must need plugin jquery-->
         <script src="js/jquery.min.js"></script>
