--- a/app/views/techexperts/index_techexpert.html.erb
+++ b/app/views/techexperts/index_techexpert.html.erb
@@ -249,8 +249,8 @@
                                 <li><i class="fa fa-star yellow"></i></li>
                                 <li><i class="fa fa-star yellow"></i></li>
                                 <li><i class="fa fa-star yellow"></i></li>
-                                <li><i class="fa fa-star gray"></i></li>
-                                <li><i class="fa fa-star gray"></i></li>
+                                <li><i class="fa fa-star yellow"></i></li>
+                                <li><i class="fa fa-star yellow"></i></li>
                                 <li class="review"><a href="#">(30 Thanks)</a></li>
                         </ul>
                         <!--10-11-2015 Cat Add Rating of Tech Experts-->
@@ -279,8 +279,8 @@
                                 <li><i class="fa fa-star yellow"></i></li>
                                 <li><i class="fa fa-star yellow"></i></li>
                                 <li><i class="fa fa-star yellow"></i></li>
-                                <li><i class="fa fa-star gray"></i></li>
-                                <li><i class="fa fa-star gray"></i></li>
+                                <li><i class="fa fa-star yellow"></i></li>
+                                <li><i class="fa fa-star yellow"></i></li>
                                 <li class="review"><a href="#">(30 Thanks)</a></li>
                         </ul>
                         <!--10-11-2015 Cat Add Rating of Tech Experts-->
@@ -308,8 +308,8 @@
                                 <li><i class="fa fa-star yellow"></i></li>
                                 <li><i class="fa fa-star yellow"></i></li>
                                 <li><i class="fa fa-star yellow"></i></li>
-                                <li><i class="fa fa-star gray"></i></li>
-                                <li><i class="fa fa-star gray"></i></li>
+                                <li><i class="fa fa-star yellow"></i></li>
+                                <li><i class="fa fa-star yellow"></i></li>
                                 <li class="review"><a href="#">(30 Thanks)</a></li>
                         </ul>
                         <!--10-11-2015 Cat Add Rating of Tech Experts-->
@@ -337,8 +337,8 @@
                                 <li><i class="fa fa-star yellow"></i></li>
                                 <li><i class="fa fa-star yellow"></i></li>
                                 <li><i class="fa fa-star yellow"></i></li>
-                                <li><i class="fa fa-star gray"></i></li>
-                                <li><i class="fa fa-star gray"></i></li>
+                                <li><i class="fa fa-star yellow"></i></li>
+                                <li><i class="fa fa-star yellow"></i></li>
                                 <li class="review"><a href="#">(30 Thanks)</a></li>
                         </ul>
                         <!--10-11-2015 Cat Add Rating of Tech Experts-->
@@ -369,8 +369,8 @@
                                 <li><i class="fa fa-star yellow"></i></li>
                                 <li><i class="fa fa-star yellow"></i></li>
                                 <li><i class="fa fa-star yellow"></i></li>
-                                <li><i class="fa fa-star gray"></i></li>
-                                <li><i class="fa fa-star gray"></i></li>
+                                <li><i class="fa fa-star yellow"></i></li>
+                                <li><i class="fa fa-star yellow"></i></li>
                                 <li class="review"><a href="#">(30 Thanks)</a></li>
                         </ul>
                         <!--10-11-2015 Cat Add Rating of Tech Experts-->
@@ -398,8 +398,8 @@
                                 <li><i class="fa fa-star yellow"></i></li>
                                 <li><i class="fa fa-star yellow"></i></li>
                                 <li><i class="fa fa-star yellow"></i></li>
-                                <li><i class="fa fa-star gray"></i></li>
-                                <li><i class="fa fa-star gray"></i></li>
+                                <li><i class="fa fa-star yellow"></i></li>
+                                <li><i class="fa fa-star yellow"></i></li>
                                 <li class="review"><a href="#">(30 Thanks)</a></li>
                         </ul>
                         <!--10-11-2015 Cat Add Rating of Tech Experts-->
@@ -427,8 +427,8 @@
                                 <li><i class="fa fa-star yellow"></i></li>
                                 <li><i class="fa fa-star yellow"></i></li>
                                 <li><i class="fa fa-star yellow"></i></li>
-                                <li><i class="fa fa-star gray"></i></li>
-                                <li><i class="fa fa-star gray"></i></li>
+                                <li><i class="fa fa-star yellow"></i></li>
+                                <li><i class="fa fa-star yellow"></i></li>
                                 <li class="review"><a href="#">(30 Thanks)</a></li>
                         </ul>
                         <!--10-11-2015 Cat Add Rating of Tech Experts-->
@@ -456,8 +456,8 @@
                                 <li><i class="fa fa-star yellow"></i></li>
                                 <li><i class="fa fa-star yellow"></i></li>
                                 <li><i class="fa fa-star yellow"></i></li>
-                                <li><i class="fa fa-star gray"></i></li>
-                                <li><i class="fa fa-star gray"></i></li>
+                                <li><i class="fa fa-star yellow"></i></li>
+                                <li><i class="fa fa-star yellow"></i></li>
                                 <li class="review"><a href="#">(30 Thanks)</a></li>
                         </ul>
                         <!--10-11-2015 Cat Add Rating of Tech Experts-->
