--- a/app/views/processes/index_process.html.erb
+++ b/app/views/processes/index_process.html.erb
@@ -20,8 +20,13 @@
         <!--      <link href="css/style-sea-green.css" rel="stylesheet" type="text/css" media="screen">-->
         <!-- custom css (style-gold color ) -->
         <!--       <link href="css/style-gold.css" rel="stylesheet" type="text/css" media="screen">-->
+
         <!-- font awesome for icons -->
-        <link href="font-awesome-4.3.0/css/font-awesome.min.css" rel="stylesheet">
+        <!--<link href="font-awesome-4.3.0/css/font-awesome.min.css" rel="stylesheet">-->
+        <!-- The below link is Rails Assets Pipeline code, it is similiar with above rel="stylesheet".
+             This works locally, but cannot push to heroku. -->
+        <%= stylesheet_link_tag  '/font-awesome.min.css', media: 'all', 'data-turbolinks-track' => true %>
+
         <!-- flex slider css -->
         <link href="css/flexslider.css" rel="stylesheet" type="text/css" media="screen">
         <!-- animated css  -->
@@ -87,7 +92,7 @@
           <!--End of Future Solution-->
           <p>View the Bug Reports to get know the user ability & quality of your products or Report some bugs to say your voice.</p>
         </div>
-        
+
         <div class="step">
           <div class="icon-square"> <i class="fa fa-cogs"></i> </div>
           <h5>PAY & GET PAID BASED ON RESULTS</h5>
