--- a/app/views/processes/index_process.html.erb
+++ b/app/views/processes/index_process.html.erb
@@ -22,10 +22,9 @@
         <!--       <link href="css/style-gold.css" rel="stylesheet" type="text/css" media="screen">-->
 
         <!-- font awesome for icons -->
-        <!--<link href="font-awesome-4.3.0/css/font-awesome.min.css" rel="stylesheet">-->
-        <!-- The below link is Rails Assets Pipeline code, it is similiar with above rel="stylesheet".
-             This works locally, but cannot push to heroku. -->
-        <%= stylesheet_link_tag  '/font-awesome.min.css', media: 'all', 'data-turbolinks-track' => true %>
+        <link href="font-awesome-4.3.0/css/font-awesome.min.css" rel="stylesheet">
+        <!-- Had a try the below link, both above link href="font-awesome-4.3.0/css/font-awesome.min.css" rel="stylesheet" and below are right linl.
+        <%= stylesheet_link_tag  '/font-awesome.min.css', media: 'all', 'data-turbolinks-track' => true %> -->
 
         <!-- flex slider css -->
         <link href="css/flexslider.css" rel="stylesheet" type="text/css" media="screen">
